fix minor typo in prompt

--- a/local_rag.ipynb
+++ b/local_rag.ipynb
@@ -34,7 +34,7 @@
     "EMBEDDING_MODEL = \"mxbai-embed-large\"\n",
     "\n",
     "PROMPT_TEMPLATE = \"\"\"\n",
-    "Below is a list of document that you'll use to answer a question.\n",
+    "Below is a list of documents that you'll use to answer a question.\n",
     "IMPORTANT: DO NOT USE ANY OF YOUR GENERAL KNOWLEDGE TO ANSWER THE QUESTION!\n",
     "USE ONLY THE DOCUMENTS BELOW TO ANSWER THE QUESTION.\n",
     "Documents: \n",
